# ezid

./: .git-blame-ignore-revs  .gitignore  .hgignore  .travis.yml  LDAP  LICENSE.md  LOCALIZATION  NOTES  README  README.md  README.orig.md  README.poetry.md  REBRANDING  SCHEMA.pptx  badger  buildStyles.bash  db_json_migration.sql  deploy_minter_migration.sh  dev_env_vars.sourceme.sh  dev_prep_env.sh  diffsettings.sh  dump-queue-tables.sh  ec2_installation.md  ec2_upgrade.adoc  ezid-py-startup.md  gulpfile.js  manage.py  master_shoulders.txt  mint_identifier_sequence.puml  package-lock.json  package.json  prepare_test_db.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-dev.txt.bk  requirements-dev.txt.bk.orig  requirements-dev.txt.orig  requirements.txt  requirements.txt.bk  (+6 more)
ansible/: .gitignore  .site.yaml.swp  README.md  site.yaml  test_vars.yaml
apache/: django.wsgi
blobs/: diag-migrate-blobs.py
code/: anvl.py  api.py  backproc.py  binder_async.py  config.py  config_loader.py  crossref.py  datacite.py  datacite_async.py  datacite_xml.py  dispatch.py  django_util.py  download.py  erc.py  ezid.py  ezidadmin.py  form_objects.py  geometry_util.py  handle_system.py  idmap.py  linkcheck_update.py  log.py  mapping.py  menu.py  metadata.py  middleware.py  newsfeed.py  nog_minter.py  noid.py  noid_egg.py  noid_nog.py  noid_nog_standalone.py  oai.py  policy.py  register_async.py  search.py  search_util.py  shoulder.py  shoulder_parser.py  startup.py  (+19 more)
dev/: README  README.md  component_accordion.html  component_citation.html  component_cite.html  component_customize-table.html  component_download.html  component_footer.html  component_forms-repeated.html  component_header-with-login.html  component_header-without-login.html  component_header.html  component_home-banner.html  component_identifier-boxes.html  component_login-menu.html  component_login-modal.html  component_pagination.html  component_proxy-modal.html  component_share.html  component_showhide.html  component_sidebox.html  component_tab.html  component_table.html  component_table2.html  component_table2_nosort.html  component_table3.html  component_table3_hyphen.html  component_testing.html  element_buttons.html  element_diagram.html  element_fieldsets.html  element_form-controls.html  element_headings.html  element_links.html  element_pre.html  index.html  layout_account.html  layout_contact.html  layout_create.html  layout_dashboard.html  (+9 more)
doc/: README  apidoc.1.html  apidoc.1.rst  apidoc.2.html  apidoc.2.rst  apidoc.2_body.html  bdb_minter_migration.md  bdb_minter_migration_notes.md  blank_startup.md  docstyle.css  example_search.json  example_search.json5  ezid-client.py  ezid.py  ezid_daemons.md  proc-stats.md  resolve_poc.ipynb  resolver_dev.md  tools_status.md
etc/: minter_template.hjson  search-mysql-addendum.sql  search-schema.sql  store-mysql-addendum.sql  store-schema.sql
ezidapp/: __init__.py  admin.py  celery.py  models.py  stats.py
impl/: anvl.py  api.py  backproc.py  binder_async.py  client_util.py  config.py  config_loader.py  crossref.py  daemon.py  datacite.py  datacite_async.py  datacite_xml.py  dispatch.py  django_util.py  download.py  enqueue.py  erc.py  ezid.py  feedparser.py  form_objects.py  geometry_util.py  handle_system.py  http_accept_types.py  http_client.py  ipc.py  ipc_client.py  ipc_test.sh  linkcheck_update.py  log.py  log_filters.py  mapping.py  metadata.py  middleware.py  monitor.py  newsfeed.py  nog_minter.py  noid_egg.py  noid_nog.py  noid_nog_standalone.py  oai.py  (+28 more)
migrate_db_to_py3/: db-gen-export-from-auth.py  db-migrate-blobs-to-metadata.py  db-prod-snapshot.sh  db-update-fk.py  diag-check-metadata.py  diag-create-fixtures.py  run-migration.py  run-migration.sh  schema-migration.sql  schema_migration.sql  schema_migration_helpers.sql  split-schema-migration.py
my thread and process locking experiments/: ipc.py  ipc_client.py  ipc_test.sh
profiles/: crossref.profile  crossref2datacite.xsl  datacite.profile  datacite.xsl  dc.profile  erc.profile  internal.profile  remove_ns_prefix.xsl
settings/: awsprodtest.py  common.py  development.py  ezid.conf  local_settings.py  localdev.py  logging.offline.conf  logging.server.conf  production.py  remotedev.py  routers.py  settings.py.j2  settings_template.py  staging.py  template.py  test_config.conf  test_logging.conf  test_settings.py  test_sqlite_settings.py  tests.py  uidev.py  uidev_scott.py  urls.py  workflow.py
src/: README
static/: account.js  admin.js  base.js  datacite_emptyRecord.xml  identifier.js  info  jquery.autocomplete.css  layout.html  metadata_tooltips.js  purdue  sitemap.xml  style.css
static_library/: index.html
templates/: 400.html  401.html  404.html  405.html  500.html  account.html  admin.html  base.html  contact.html  create.html  help.html  home.html  identifier.html  index.html  info  learn.html  login.html  manage.html  pwreset1.html  pwreset2.html  tabs.html  tombstone.html
tests/: READ_ME.md  apicli_py2.py  apicli_py3.py  bdb-util.py  conftest.py  linkchecker_test_id_url_v0.tsv  linkchecker_test_id_url_v0_out.csv  mysql_test_setup.sh  nog_perl_1m.sh  out.100_0.csv  run_pytest.sh  sample.py  setup_tests.sh  test.py  test1.sh  test2.sh  test_100_url_v0.txt  test_api.py  test_api_util.py  test_datacite.py  test_doi_util.py  test_ezid_minter.py  test_form_objects.py  test_group_model.py  test_id_namespace.py  test_id_ns.py  test_impl_util.py  test_minter.py  test_nog_minter.py  test_open_search.py  test_open_search_doc.py  test_proc_binder.py  test_relateditem_form.py  test_serialization.py  test_shoulder_create_ark.py  test_shoulder_create_doi.py  test_shoulder_de_activate.py  test_shoulder_list.py  test_shoulder_mint.py  test_user_model.py  (+2 more)
tools/: anvl.py  batch-download.sh  batch-register  batch_download.sh  batch_register.py  client  client.py  convert-dump  convert_dump.py  crontab  dashboard  dashboard.py  decode-file  decode_file.py  delete-group  delete-sessions  delete-user  delete_group.py  delete_sessions.py  delete_user.py  diff-datacite-1  diff-dumps  diff-ezid-ldap  (+76 more)
(+931 files in other folders)
