[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip_string_normalization = true
line_length = 100

[project]
name = "ezid"
version = "v3"
description = "EZID - identifiers made easy. Create and manage long-term globally unique IDs for data and other sources"
#license = "CC-BY-3.0-US"
#license = "MIT License"
readme = "README.md"
authors = [
    { name = "Regents of the University of California"}
    ]
maintainers =[
    { name = "Jing Jiang", email = "jing.jiang@ucop.edu" },
    { name = "datadave", email = "605409+datadavev@users.noreply.github.com" },
    { name = "Scott Fisher", email = "sfisher@ucop.edu"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.11",
]
keywords = ["persistent identifier", "id"]
packages = [
    { include = "ezidapp" },
    { include = "settings" },
    { include = "impl" },
]

requires-python = ">=3.11,<4"

dependencies = [
  "django ==4.2.22",
  "aiomysql >=0.2.0,<0.3.0",
  "boto3 >=1.37.19,<2.0.0",
  "mysql >=0.0.3,<0.1.0",
  "myloginpath >=0.0.4,<0.1.0",
  "jinja2 >=3.1.6,<4.0.0",
  "pygments >=2.19.1,<3.0.0",
  "fasteners >=0.19,<0.20",
  "feedparser >=6.0.11,<7.0.0",
  "filelock >=3.18.0,<4.0.0",
  "freezegun >=1.5.1,<2.0.0",
  "hjson >=3.1.0,<4.0.0",
  "lxml >=5.3.1,<6.0.0",
  "python-dateutil >=2.9.0.post0,<3.0.0",
  "requests >=2.32.4,<3.0.0",
  "toml >=0.10.2,<0.11.0",
  "simplegist >=1.0.1,<2.0.0",
  "xmltodict >=0.14.2,<0.15.0",
  "pymysql >=1.1.1,<2.0.0",
  "configparser >=7.2.0,<8.0.0",
  "ecs-logging >=2.2.0,<3.0.0",
  "opensearch-dsl >=2.1.0,<3.0.0",
  "mysqlclient >=2.2.7,<3.0.0"
]

[project.urls]
Repository = "https://github.com/cdluc3/ezid"

[project.scripts]
ez-batch-register = 'tools.batch_register:main'
ez-client = 'tools.client:main'
ez-dashboard = 'tools.dashboard:main'
ez-decode-file = 'tools.decode_file:main'
ez-dump-convert = 'tools.dump_convert:main'
ez-dump-crossref = 'tools.dump_crossref:main'
ez-dump-datacite = 'tools.dump_datacite:main'
ez-dump-diff = 'tools.dump_diff:main'
ez-dump-diff-crossref = 'tools.dump_diff_crossref:main'
ez-dump-filter = 'tools.dump_filter:main'
ez-dump-project = 'tools.dump_project:main'
ez-dump-store = 'tools.dump_store:main'
ez-filterlog = 'tools.filterlog:main'
ez-queue-admin = 'tools.queue_admin:main'
ez-shoulderless-identifiers = 'tools.shoulderless_identifiers:main'
ez-link-check-emailer = 'tools.link_check_emailer:main'
ez-link-check-summary-report = 'tools.link_check_summary_report:main'
ez-downserver = 'tools.downserver:main'
